# sc-music

./: README.md  meson.build
src/: main.cpp  song.cpp  song.hpp
src/songs/: beethoven_n9.cpp  songs.hpp  the_heart_asks_pleasure_first.cpp  we_wish_you_a_merry_christmas.cpp  zelda_lullaby.cpp
